--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "~8.1.3",
     "@angular/core": "~8.1.3",
     "@angular/forms": "~8.1.3",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.1.3",
     "@angular/platform-browser-dynamic": "~8.1.3",
     "@angular/router": "~8.1.3",
